@@ -1,2 +1,2 @@
 -- @@stderr --
-dtrace: failed to compile script test/unittest/offsetof/err.D_UNKNOWN.badmemb.d: [D_SYNTAX] line 43: syntax error near "vnode_t"
+dtrace: failed to compile script test/unittest/offsetof/err.D_UNKNOWN.badmemb.d: [D_SYNTAX] line 43: syntax error near "vnode_t, v_no_such_member));"
