@@ -1,2 +1,2 @@
 -- @@stderr --
-dtrace: failed to compile script test/unittest/typedef/err.D_SYNTAX.BadExistingTypedef.d: [D_SYNTAX] line 40: syntax error near "new_int"
+dtrace: failed to compile script test/unittest/typedef/err.D_SYNTAX.BadExistingTypedef.d: [D_SYNTAX] line 40: syntax error near "new_int;"
